txt-output/10.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: zero and addReciprocals should be swapped
foldleft = foldl                       
intList = [12, 3]
zero = 0.0
addReciprocals total i = total + (1.0 / i)
totalOfReciprocals = foldleft zero addReciprocals intList

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\10.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\10.hs:8:7:
    No instance for (Fractional ((a -> a -> a) -> b -> a -> a -> a))
      arising from the literal `0.0' at ill-typed\10.hs:8:7-9
    Possible fix:
      add an instance declaration for
      (Fractional ((a -> a -> a) -> b -> a -> a -> a))
    In the expression: 0.0
    In the definition of `zero': zero = 0.0


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\10.hs, ill-typed\10.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\10.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\10.hs:7:12: error:
    * Ambiguous type variable `a0' arising from the literal `12'
      prevents the constraint `(Num a0)' from being solved.
      Relevant bindings include
        intList :: [a0] (bound at ill-typed\10.hs:7:1)
      Probable fix: use a type annotation to specify what `a0' should be.
      These potential instances exist:
        instance Num Integer -- Defined in `GHC.Num'
        instance Num Double -- Defined in `GHC.Float'
        instance Num Float -- Defined in `GHC.Float'
        ...plus two others
        ...plus 7 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    * In the expression: 12
      In the expression: [12, 3]
      In an equation for `intList': intList = [12, 3]
  |
7 | intList = [12, 3]
  |            ^^

ill-typed\10.hs:8:8: error:
    * No instance for (Fractional
                         ((a1 -> a1 -> a1) -> a0 -> a1 -> a1 -> a1))
        arising from the literal `0.0'
        (maybe you haven't applied a function to enough arguments?)
    * In the expression: 0.0
      In an equation for `zero': zero = 0.0
  |
8 | zero = 0.0
  |        ^^^

ill-typed\10.hs:10:36: error:
    * Ambiguous type variable `a1' arising from a use of `addReciprocals'
      prevents the constraint `(Fractional a1)' from being solved.
      Relevant bindings include
        totalOfReciprocals :: a1 -> a1 -> a1
          (bound at ill-typed\10.hs:10:1)
      Probable fix: use a type annotation to specify what `a1' should be.
      These potential instances exist:
        instance Fractional Double -- Defined in `GHC.Float'
        instance Fractional Float -- Defined in `GHC.Float'
        ...plus two instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    * In the second argument of `foldleft', namely `addReciprocals'
      In the expression: foldleft zero addReciprocals intList
      In an equation for `totalOfReciprocals':
          totalOfReciprocals = foldleft zero addReciprocals intList
   |
10 | totalOfReciprocals = foldleft zero addReciprocals intList
   |                                    ^^^^^^^^^^^^^^
